errors counting refactoing

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -15,19 +15,33 @@ ru:
         datetime: 'Дата и время'
         description: 'Описание'
   controllers:
-    events:
-      created: 'Вы создали новое мероприятие'
-      updated: 'Вы обновили мероприятие'
-      deleted: 'Вы успешно удалили мероприятие'
-    users:
-      updated: 'Вы обновили свой профиль'
+      events:
+        created: 'Вы создали новое мероприятие'
+        updated: 'Вы обновили мероприятие'
+        destroyed: 'Вы удалили мероприятие :('
+      users:
+        updated: 'Вы обновили свой профиль'
+      comments:
+        destroyed: 'Комментарий удален'
+        created: 'Ваш комментарий добавлен'
+        error: 'Ошибка с комментарием'
+      subscription:
+        created: 'Вы подписаны на это событие'
+        destroyed: 'Участник отписан'
+        error: 'Подписка/отписка не сработала'
   app:
     name: 'Шашлыки'
     company: 'Хороший программист 2018'
   errors:
-    one: "%{count} ошибка"
-    few: "%{count} ошибки"
-    many: "%{count} ошибок"
+    one: '%{count} ошибка'
+    few: '%{count} ошибки'
+    many: '%{count} ошибок'
   event:
     destroy_message: 'Мероприятие будет удалено навсегда'
+  comments:
+    comment:
+      destroy_confirm: 'Вы уверены, что хотите удалить этот комментарий?'
+  subscriptions:
+    subscription:
+      destroy_confirm: 'Вы уверены, что хотите удалить эту подписку?'
 
