--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -3,6 +3,9 @@ ru:
     models:
       user: 'Пользователь'
       event: 'Событие'
+      subscription:
+        user_erorr: 'Вы не можете подписаться на свое событие'
+        email_erorr: 'Данный email уже есть в без, впишите свой или зарегестируйтесь'
     attributes:
       user:
         email: 'Email'
