--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -3,6 +3,9 @@ ru:
     models:
       user: 'Пользователь'
       event: 'Событие'
+      subscription: 'Подписка'
+      comment: 'Комментарий'
+      photo: 'Фотография'
       subscription:
         user_erorr: 'Вы не можете подписаться на свое событие'
         email_erorr: 'Данный email уже есть в без, впишите свой или зарегестируйтесь'
@@ -10,6 +13,7 @@ ru:
       user:
         email: 'Email'
         name: 'Имя'
+        avatar: 'Аватарка'
         password: 'Пароль'
         password_confirmation: 'Подтверждение пароля'
       event:
@@ -17,6 +21,14 @@ ru:
         address: 'Место проведения'
         datetime: 'Дата и время'
         description: 'Описание'
+      comment:
+        user_name: 'Ваше имя'
+        body: 'Комментарий'
+      subscription:
+        user_name: 'Ваше имя'
+        user_email: 'Ваш email'
+      photo:
+        photo: 'Фотография'
   controllers:
       events:
         created: 'Вы создали новое мероприятие'
@@ -32,6 +44,10 @@ ru:
         created: 'Вы подписаны на это событие'
         destroyed: 'Участник отписан'
         error: 'Подписка/отписка не сработала'
+      photos:
+        error: 'Что-то не так с фоткой'
+        created: 'Вы добавили фотографию к событию'
+        destroyed: 'Вы удалили фотку'
   app:
     name: 'Шашлыки'
     company: 'Хороший программист 2018'
