--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -84,3 +84,10 @@ ru:
       event: 'Событие'
       datetime: 'Состоится'
       owner: 'Организатор'
+  activerecord:
+    errors:
+      models:
+        photo:
+          attributes:
+            user:
+              required: 'Только авторизированный пользователь может заргужать фотографии'
