password reset forms refactoring

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -97,3 +97,9 @@ ru:
           attributes:
             user:
               required: 'Только авторизированный %{attribute} может загружать фотографии'
+  devise:
+    greeting: 'Здравствуйте'
+    notification: 'Для сброса пароля следуйте по ссылке ниже'
+    change_password: 'Сменить пароль'
+    notification_2: 'Если Вы не запрашивали это действие, пожалуйста, проигнорируйте это письмо.'
+    notification_3: 'Ваш пароль не изменится, пока вы не перейдете по ссылке Выше и не измените его на новый.'
