--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -19,6 +19,7 @@ ru:
         datetime: 'Дата и время'
         description: 'Описание'
         User: 'Пользователь'
+        pincode: 'Пинкод доступа'
       comment:
         user_name: 'Ваше имя'
         body: 'Комментарий'
@@ -34,6 +35,7 @@ ru:
         created: 'Вы создали новое мероприятие'
         updated: 'Вы обновили мероприятие'
         destroyed: 'Вы удалили мероприятие :('
+        wrong_pincode: 'Неверный пинкод!'
       users:
         updated: 'Вы обновили свой профиль'
       comments:
